openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ms-pg-poc
    version: latest
  name: ms-pg-poc
  namespace: ms-pg-poc
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    deploymentconfig: ms-pg-poc
  sessionAffinity: None
  type: ClusterIP
