openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ms-pg-poc
    version: latest
  name: ms-pg-poc
  nampespace: ms-pg-poc
spec:
  path: /
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: ms-pg-poc
    weight: 100
  wildcardPolicy: None
